List & forms, Hooks

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jyking99.github.io/web-app-projects/docs/",
+  "homepage": "https://jyking99.github.io/web-app-projects/",
   "name": "react-lab",
   "version": "0.1.0",
   "private": true,
